Added initial tests for ConfigPlane

--- a/HConfigTests/HConfigTests.csproj
+++ b/HConfigTests/HConfigTests.csproj
@@ -70,6 +70,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="ConfigPlaneTests.cs" />
     <Compile Include="ConfigSpokeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
