Still WIP with tests needed . Added ConfigController and IConfigController which are the interface

--- a/HConfigTests/HConfigTests.csproj
+++ b/HConfigTests/HConfigTests.csproj
@@ -71,8 +71,10 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="ConfigControllerTests.cs" />
     <Compile Include="ConfigPlaneTests.cs" />
     <Compile Include="ConfigSpokeTests.cs" />
+    <Compile Include="ControlledConfigPlaneTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
