--- a/HConfig/HConfig.csproj
+++ b/HConfig/HConfig.csproj
@@ -41,10 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigController.cs" />
     <Compile Include="ConfigPlane.cs" />
     <Compile Include="ConfigSpoke.cs" />
+    <Compile Include="ControlledConfigPlane.cs" />
+    <Compile Include="IConfigController.cs" />
     <Compile Include="IConfigPlane.cs" />
     <Compile Include="IConfigSpoke.cs" />
+    <Compile Include="IControlledConfigPlane.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
