--- a/HConfig/HConfig.csproj
+++ b/HConfig/HConfig.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ConfigController.cs" />
     <Compile Include="ConfigPlane.cs" />
     <Compile Include="ConfigSpoke.cs" />
+    <Compile Include="ConfigKeyReport.cs" />
     <Compile Include="ControlledConfigPlane.cs" />
     <Compile Include="IConfigController.cs" />
     <Compile Include="IConfigPlane.cs" />
