--- a/HConfigTests/HConfigTests.csproj
+++ b/HConfigTests/HConfigTests.csproj
@@ -73,7 +73,7 @@
   <ItemGroup>
     <Compile Include="ConfigControllerTests.cs" />
     <Compile Include="ConfigPlaneTests.cs" />
-    <Compile Include="ConfigSpokeTests.cs" />
+    <Compile Include="ConfigContextTests.cs" />
     <Compile Include="ControlledConfigPlaneTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
