--- a/HConfig/HConfig.csproj
+++ b/HConfig/HConfig.csproj
@@ -41,15 +41,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CacheableConfigController.cs" />
+    <Compile Include="ConfigCache.cs" />
     <Compile Include="ConfigController.cs" />
     <Compile Include="ConfigPlane.cs" />
     <Compile Include="ConfigContext.cs" />
     <Compile Include="ConfigKeyReport.cs" />
+    <Compile Include="ICacheableConfigController.cs" />
+    <Compile Include="IConfigCache.cs" />
     <Compile Include="IConfigController.cs" />
     <Compile Include="IConfigPlane.cs" />
     <Compile Include="IConfigContext.cs" />
     <Compile Include="IConfigReporter.cs" />
-    <Compile Include="IConfigWriter.cs" />
+    <Compile Include="IConfigSource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
