--- a/HConfigTests/packages.config
+++ b/HConfigTests/packages.config
@@ -3,4 +3,6 @@
   <package id="NUnit" version="3.5.0" targetFramework="net452" />
   <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net452" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net452" />
+  <package id="SpecFlow" version="2.1.0" targetFramework="net46" />
+  <package id="SpecFlow.NUnit" version="2.1.0" targetFramework="net46" />
 </packages>
